--- a/holamundo/templates/account/base.html
+++ b/holamundo/templates/account/base.html
@@ -5,12 +5,12 @@
     <head>
     
         <meta charset="utf-8">
-        <title>{% block title %}{% endblock title %} | Veltrix - Admin & Dashboard Template</title>
+        <title>{% block title %}{% endblock title %} | Consultorio Jurídico Efren</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta content="Premium Multipurpose Admin & Dashboard Template" name="description">
         <meta content="Themesbrand" name="author">
         <!-- App favicon -->
-        <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
+        <link rel="shortcut icon" href="{% static 'images/logo_negro.png' %}">
         <!-- Bootstrap Css -->
         <link href="{% static 'css/bootstrap.min.css' %}" id="bootstrap-style" rel="stylesheet" type="text/css" />
         <!-- Icons Css -->
