--- a/holamundo/templates/account/password_change.html
+++ b/holamundo/templates/account/password_change.html
@@ -8,10 +8,10 @@
                             <div class="card overflow-hidden">
                                 <div class="bg-primary">
                                     <div class="text-primary text-center p-4">
-                                        <h5 class="text-white font-size-20">Change Password</h5>
-                                        <p class="text-white-50">Get your free Veltrix account now.</p>
+                                        <h5 class="text-white font-size-20">Cambiar Constraseña</h5>
+                                        <p class="text-white-50">Llena los campos para cambiar tu contraseña.</p>
                                         <a href="{% url 'dashboard' %}" class="logo logo-admin">
-                                            <img src="{% static 'images/logo-sm.png' %}" height="24" alt="logo">
+                                            <img src="{% static 'images/LOGO.png' %}" height="75" alt="logo">
                                         </a>
                                     </div>
                                 </div>
@@ -44,8 +44,8 @@
                                     </form>
                                     
                                     <div class="mt-4 text-center">
-                                        <p class="mb-0">Back to the homepage ? <a href="{% url 'dashboard' %}" class="fw-semibold text-primary text-decoration-underline"> dashboard </a> </p>
-                                        <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Veltrix. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign</p>
+                                        <p class="mb-0">Deseas regresar el menu ? <a href="{% url 'dashboard' %}" class="fw-semibold text-primary text-decoration-underline"> Menu </a> </p>
+                                        <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Consorcio Jurídico Efren <i class="mdi mdi-heart text-danger"></i> by JDA</p>
 
                                     </div>
                                 </div>
