--- a/holamundo/templates/account/password_reset.html
+++ b/holamundo/templates/account/password_reset.html
@@ -12,7 +12,7 @@
                                 <div class="text-primary text-center p-4">
                                     <h5 class="text-white font-size-20 p-2">Reset Password</h5>
                                     <a href="{% url 'dashboard' %}" class="logo logo-admin">
-                                        <img src="{% static 'images/logo-sm.png' %}" height="24" alt="logo">
+                                        <img src="{% static 'images/LOGO.png' %}" height="75" alt="logo">
                                     </a>
                                 </div>
                             </div>
