--- a/holamundo/templates/account/signup.html
+++ b/holamundo/templates/account/signup.html
@@ -11,10 +11,10 @@
             <div class="card overflow-hidden">
                 <div class="bg-primary">
                     <div class="text-primary text-center p-4">
-                        <h5 class="text-white font-size-20">Free Signup</h5>
-                        <p class="text-white-50">Get your free Veltrix account now.</p>
+                        <h5 class="text-white font-size-20">Registrtate</h5>
+                        <p class="text-white-50">LLena el formulario para ingresar al sistema</p>
                         <a href="{% url 'dashboard' %}" class="logo logo-admin">
-                            <img src="{% static 'images/logo-sm.png' %}" height="24" alt="logo">
+                            <img src="{% static 'images/LOGO.png' %}" height="75" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -54,12 +54,12 @@
 
                             <div class="mb-3 row">
                                 <div class="col-12 text-end">
-                                    <button class="btn btn-primary w-md waves-effect waves-light" type="submit">Signup</button>
+                                    <button class="btn btn-primary w-md waves-effect waves-light" type="submit">Registrarse</button>
                                 </div>
                             </div>
                             <div class="mt-4 pt-2 text-center">
                                 <div class="signin-other-title">
-                                    <h5 class="fs-sm mb-4 title">Sign In with</h5>
+                                    <h5 class="fs-sm mb-4 title">Inicia sesión con</h5>
                                 </div>
                                 <div>
                                     <a href="{% provider_login_url 'google' %}" class="btn btn-danger btn-icon waves-effect waves-light"><i class="mdi mdi-google fs-lg"></i></a>
@@ -68,7 +68,7 @@
 
                             <div class="mt-2 mb-0 row">
                                 <div class="col-12 mt-4">
-                                    <p class="mb-0">By signup you agree to the Veltrix <a href="#" class="text-primary">Terms of Use</a></p>
+                                    
                                 </div>
                             </div>
 
@@ -80,8 +80,8 @@
             </div>
 
             <div class="mt-5 text-center">
-                <p>Already have an account ? <a href="{{ login_url }}" class="fw-medium text-primary"> Signin </a> </p>
-                <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Veltrix. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign</p>
+                <p>Ya tienes cuenta <a href="{{ login_url }}" class="fw-medium text-primary"> Inicia Sesión </a> </p>
+                <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Consorcio Jurídico Efren <i class="mdi mdi-heart text-danger"></i> by JDA</p>
                 
             </div>
     
