--- a/holamundo/templates/account/login.html
+++ b/holamundo/templates/account/login.html
@@ -11,10 +11,10 @@
                     <div class="card overflow-hidden">
                         <div class="bg-primary">
                             <div class="text-primary text-center p-4">
-                                <h5 class="text-white font-size-20">Welcome Back !</h5>
-                                <p class="text-white-50">Sign in to continue to Veltrix.</p>
+                                <h5 class="text-white font-size-20">Bienvenido</h5>
+                                <p class="text-white-50">Inicia Sesión para continuar</p>
                                 <a href="{% url 'dashboard' %}" class="logo logo-admin">
-                                    <img src="{% static 'images/logo-sm.png' %}" height="24" alt="logo">
+                                    <img src="{% static 'images/LOGO.png' %}" height="75" alt="logo">
                                 </a>
                             </div>
                         </div>
@@ -37,12 +37,12 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-6 text-end">
-                                            <button class="btn btn-primary w-md waves-effect waves-light" type="submit">sign In</button>
+                                            <button class="btn btn-primary w-md waves-effect waves-light" type="submit">Iniciar Sesión</button>
                                         </div>
                                     </div>
                                     <div class="mt-4 pt-2 text-center">
                                         <div class="signin-other-title">
-                                            <h5 class="fs-sm mb-4 title">Sign In with</h5>
+                                            <h5 class="fs-sm mb-4 title">Inicia sesión con</h5>
                                         </div>
                                         <div>
                                             <a href="{% provider_login_url 'google' %}" class="btn btn-danger btn-icon waves-effect waves-light"><i class="mdi mdi-google fs-lg"></i></a>
@@ -51,7 +51,7 @@
 
                                     <div class="mt-2 mb-0 row">
                                         <div class="col-12 mt-4">
-                                            <a href="{% url 'account_reset_password' %}"><i class="mdi mdi-lock"></i> Forgot your password?</a>
+                                            <a href="{% url 'account_reset_password' %}"><i class="mdi mdi-lock"></i> Olvidaste tu contraseña</a>
                                         </div>
                                     </div>
 
@@ -63,8 +63,8 @@
                     </div>
 
                     <div class="mt-5 text-center">
-                        <p>Don't have an account ? <a href="{{ signup_url }}" class="fw-medium text-primary"> Signup now </a> </p>
-                        <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Veltrix. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign</p>
+                        <p>NO estas registrado? <a href="{{ signup_url }}" class="fw-medium text-primary"> Registrate </a> </p>
+                        <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Consorcio Jurídico Efren <i class="mdi mdi-heart text-danger"></i> by JDA</p>
                     </div>
 
 {% endblock content %}
