--- a/holamundo/templates/account/logout.html
+++ b/holamundo/templates/account/logout.html
@@ -7,10 +7,10 @@
                     <div class="card overflow-hidden">
                         <div class="bg-primary">
                             <div class="text-primary text-center p-4">
-                                <h5 class="text-white font-size-20">Log Out</h5>
-                                <p class="text-white-50">Get your free Veltrix account now.</p>
+                                <h5 class="text-white font-size-20">Cerrar Sesión</h5>
+                                <p class="text-white-50">Esperamos tu regreso</p>
                                 <a href="{% url 'dashboard' %}" class="logo logo-admin">
-                                    <img src="{% static 'images/logo-sm.png' %}" height="24" alt="logo">
+                                    <img src="{% static 'images/LOGO.png' %}" height="75" alt="logo">
                                 </a>
                             </div>
                         </div>
@@ -27,7 +27,7 @@
                             </form>
                         </div>
                         <div class="mt-4 text-center">
-                            <p class="mb-0">Back to home ? <a href="{% url 'dashboard' %}" class="fw-semibold text-primary text-decoration-underline"> Dashboard </a> </p>
+                            <p class="mb-0">¿Deseas regresar al menu? <a href="{% url 'dashboard' %}" class="fw-semibold text-primary text-decoration-underline"> Menu </a> </p>
                         </div>
                     </div>
                                
