--- a/holamundo/templates/account/password_reset_from_key_done.html
+++ b/holamundo/templates/account/password_reset_from_key_done.html
@@ -10,7 +10,7 @@
                             <h5 class="text-white font-size-20">Password Reset Key Done</h5>
                             <p class="text-white-50">Get your free Veltrix account now.</p>
                             <a href="{% url 'dashboard' %}" class="logo logo-admin">
-                                <img src="{% static 'images/logo-sm.png' %}" height="24" alt="logo">
+                                <img src="{% static 'images/LOGO.png' %}" height="75" alt="logo">
                             </a>
                         </div>
                     </div>
