--- a/holamundo/templates/partials/base.html
+++ b/holamundo/templates/partials/base.html
@@ -10,7 +10,7 @@
         <meta content="Premium Multipurpose Admin & Dashboard Template" name="description">
         <meta content="Themesbrand" name="author">
         <!-- App favicon -->
-        <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
+        <link rel="shortcut icon" href="{% static 'images/LOGO.png' %}">
         {% block css %}
         {% block extra_css %}
         {% endblock %}
