--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -8,7 +8,7 @@
                     <div id="sidebar-menu">
                         <!-- Left Menu Start -->
                         <ul class="metismenu list-unstyled" id="side-menu">
-                            <li class="menu-title" key="Main">Main</li>
+                            <li class="menu-title" key="Main">Menu</li>
 
                             <li>
                                 <a href="{% url 'dashboard' %}" class="waves-effect">
