--- a/holamundo/templates/registro_cliente.html
+++ b/holamundo/templates/registro_cliente.html
@@ -23,43 +23,13 @@
 
     <div class="container mt-5">
         <h1 class="text-center">Registro de Cliente</h1>
-        <form method="post" action="{% url 'registro_cliente' %}" class="col-md-6 mx-auto">
+        <form method="post" action="{% url 'ver_perfil_usuario' %}">
             {% csrf_token %}
             
-            <div class="form-group">
-                <label for="{{ form.cedula.id_for_label }}">Cédula:</label>
-                {{ form.cedula }}
-            </div>
-        
-            <div class="form-group">
-                <label for="{{ form.nombrec.id_for_label }}">Nombre:</label>
-                {{ form.nombrec }}
-            </div>
-        
-            <div class="form-group">
-                <label for="{{ form.apellido.id_for_label }}">Apellido:</label>
-                {{ form.apellido }}
-            </div>
-        
-            <div class="form-group">
-                <label for="{{ form.direccion.id_for_label }}">Dirección:</label>
-                {{ form.direccion }}
-            </div>
-        
-            <div class="form-group">
-                <label for="{{ form.celular.id_for_label }}">Celular:</label>
-                {{ form.celular }}
-            </div>
-        
-            <div class="form-group">
-                <label for="{{ form.correo.id_for_label }}">Correo:</label>
-                {{ form.correo }}
-            </div>
-        
-           
-           
-            <button type="submit" class="btn btn-primary">Registrar Cliente</button>
-        </form>
+            {{ form.as_p }}
+          
+            <button type="submit">Guardar</button>
+          </form>
     </div>
 
     
