--- a/holamundo/templates/dashboard.html
+++ b/holamundo/templates/dashboard.html
@@ -21,6 +21,14 @@
     <div class="container mt-5">
         <h1 class="text-center">Bienvenido a la Página de Inicio</h1>
         
+        {% if messages %}   
+            <ul class="messages">    
+            {% for message in messages %}
+            <li class="{{ message.tags }}">{{ message }}</li>    
+            {% endfor %}   
+            </ul>
+        {% endif %}
+
         <div class="card-deck mt-5">
             <div class="card">
                 <div class="card-body">
