--- a/holamundo/templates/registrar_caso.html
+++ b/holamundo/templates/registrar_caso.html
@@ -51,7 +51,7 @@
                             {{ form.descripcion }}
                         </div>
     
-                        <button type="submit" class="btn btn-primary">Registrar Cita</button>
+                        <button type="submit" class="btn btn-primary">Registrar Caso</button>
                     </div>
                 </div>
             </div>
