--- a/holamundo/templates/registrar_caso.html
+++ b/holamundo/templates/registrar_caso.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <form method="post" action="{% url 'registrar_caso' %}" class="container">
+    <form method="POST" action="{% url 'registrar_caso' %}" class="container">
         {% csrf_token %}
         <div class="row justify-content-center">
             <div class="col-sm-6">
@@ -29,20 +29,16 @@
                         <h5 class="card-title">Registro de Casos</h5>
     
                         <div class="form-group">
-                            <label for="id_abogado" class="font-weight-bold">Abogado:</label>
-                            {{ form.abogado }}
-                        </div>
-                        <div class="form-group">
-                            <label for="id_fecha_cita" class="font-weight-bold">Cliente:</label>
+                            <label for="id_cliente" class="font-weight-bold">Cliente:</label>
                             {{ form.cliente }}
                         </div>
     
                         <div class="form-group">
-                            <label for="id_lugar_cita" class="font-weight-bold">Tipo de caso:</label>
-                            {{ form.tipos_caso }}
+                            <label for="id_tipo_caso" class="font-weight-bold">Tipo de caso:</label>
+                            {{ form.tipos_casos }}
                         </div>
                         <div class="form-group">
-                            <label for="id_lugar_cita" class="font-weight-bold">Estado:</label>
+                            <label for="id_Estado" class="font-weight-bold">Estado:</label>
                             {{ form.Estado }}
                         </div>
     
