--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -43,7 +43,7 @@
                                     <span key="DocumentosA">Documentos</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
-                                    <li><a href="{}" key="subir_documento">Subir Documento</a></li>
+                                    <li><a href="{% url 'abogado_subir_documento' %}" key="subir_documento">Subir Documento</a></li>
                                     <li><a href="{}" key="ver_documento">Ver Documento</a></li>
                                     
                                 </ul>
