--- a/holamundo/templates/casos_vista_abogado.html
+++ b/holamundo/templates/casos_vista_abogado.html
@@ -1,4 +1,3 @@
-
 {% extends 'partials/base.html' %}
 {% load static %}
 {% block extra_css %}
@@ -10,14 +9,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Clientes por caso</title>
+    <title>Citas por Cliente</title>
 </head>
 <body>
     <div class="row">
         <div class="col-sm-8">
-            <h1>Clientes</h1>
+            <h1>Tus Citas Agendas son:</h1>
         </div>
-        
+        <div class="col-sm-4">
+            <a href="{% url 'registrar_cita1' %}" class="btn btn-primary">Registrar Cita</a>
+        </div>
     </div>
 
 <div>
@@ -25,20 +26,21 @@
         <thead class="table-light">
             <tr>
                 <th scope="col">Cliente</th>
-                <th scope="col">Apellido</th>
-                <th scope="col">Correo</th>
-                <th></th>
+                <th scope="col">Tipo de caso</th>
+                <th scope="col">Descripción</th>
+                <th scope="col">Opciones</th>
             </tr>
         </thead>
-        {%  for cliente in clientes_con_casos %}
+        {% for caso in casos_cliente  %}
         <tbody>
             <tr>
-                <td>{{cliente.nombrec}}</td>
-                <td>{{cliente.apellido}}</td>
-                <td>{{cliente.correo}}</td>
+                <td>{{caso.cliente}}</td>
+                <td>{{caso.tipo_caso}}</td>
+                <td>{{caso.descripcion}}</td>
                 <td>
                     <div>
-                        <a href="/casosC/{{ cliente.id }}">Ver casos</a>
+                        <a href="{}" class="btn btn-primary">Ver Detalles</a>
+                      
                     </div>
                   
 
