--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -39,7 +39,7 @@
                     </a>
                     <ul class="sub-menu" aria-expanded="false">
                         <li><a href="{% url 'abogado_subir_documento' %}" key="subir_documento">Subir Documento</a></li>
-                        <li><a href="{}" key="ver_documento">Ver Documento</a></li>
+                        <li><a href="{% url 'ver_documentos_abogado' %}" key="ver_documento">Ver Documento</a></li>
                         
                     </ul>
                 </li>
