casos que no hizo el alvaro

--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -67,7 +67,7 @@
                         <span key="CasosA">Casos</span>
                     </a>
                     <ul class="sub-menu" aria-expanded="false">
-                        <li><a href="{% url 'casos_vista_abogado' %}" key="vercasos">Ver casos</a></li>
+                        <li><a href="{% url 'clientes_con_casos' %}" key="vercasos">Ver casos</a></li>
                         
                     </ul>
                     <ul class="sub-menu" aria-expanded="false">
